--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ token.secret=UpgradCovid@%^%@^!@$!@$@#$#$#6763276327
 
 ##kitematic mysql server
 spring.datasource.username=root
-spring.datasource.password=Mm$65748
+spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://localhost:3306/upgradpg
 
 spring.jpa.hibernate.ddl-auto=update
